--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,770 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600&display=swap");
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Roboto Flex", sans-serif;
+  box-sizing: border-box;
+}
+:root {
+  --bg-och: #242f3d;
+  --bg-1: #17212b;
+  --bg-bold: #0e1621;
+  --color-1: #3d4ff0;
+  --color-1-a: #2a3def;
+  --text-color-1: #bfc3fc;
+  --text-color-2: #f9f9f9;
+  --delete-toq: #a3001b;
+  --delete-och: #c20020;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --height: 55px;
+}
+button,
+input {
+  outline: none;
+  border: none;
+}
+button {
+  cursor: pointer;
+}
+.icon {
+  cursor: pointer;
+  font-size: 1.2rem;
+}
+
+li {
+  list-style-type: none;
+}
+
+/* form styles */
+
+.form_container {
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--bg-bold);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.form_container .form_box {
+  width: 420px;
+  min-height: 240px;
+  padding: 2rem 0;
+  background-color: var(--bg-1);
+  display: grid;
+  grid-template-columns: 0.8fr;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* gap: 0.6rem; */
+  border-radius: 10px;
+}
+.form_box .form_title {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+}
+.form_title .err_login {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem 0;
+  color: var(--delete-och);
+  padding-top: 1rem;
+}
+.form_title h3 {
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: var(--text-color-1);
+}
+.form_box .form_login {
+  width: 100%;
+  height: 100%;
+  padding-top: 1.5rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+.form_box .form_login.active {
+  display: none;
+}
+.recaptcha {
+  width: 100%;
+  margin: 0.6rem;
+}
+.form_login .number_input .PhoneInputInput {
+  border: 1px solid #111b2b;
+  background-color: inherit;
+  height: 50px;
+  color: var(--text-color-1);
+  padding: 0 0.8rem;
+  font-size: 1rem;
+  border-radius: 5px;
+}
+.form_login .number_input .PhoneInputInput::placeholder {
+  color: var(--text-color-1);
+}
+.form_login .number_input .PhoneInputCountrySelectArrow {
+  color: var(--text-color-2);
+  font-size: 1.68rem;
+  margin-right: 0.65rem;
+}
+.form_login .MuiInputBase-input {
+  color: var(--text-color-1) !important;
+  font-size: 1rem !important;
+}
+.form_login .MuiFormLabel-root {
+  color: var(--text-color-1);
+}
+
+.form_login .btn_box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+}
+.form_login .login_btn {
+  width: 100%;
+  height: 50px;
+  font-size: 0.95rem;
+}
+.btn_box .form_bottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.btn_box .form_bottom p {
+  font-size: 1rem;
+  color: var(--text-color-1);
+}
+.btn_box .form_bottom button {
+  background-color: inherit;
+  color: var(--text-color-1);
+  font-size: 1rem;
+}
+.btn_box .form_bottom button:hover {
+  color: var(--color-1);
+  text-decoration: underline;
+}
+/* home js style */
+
+.home {
+  max-height: 100vh;
+}
+.home::-webkit-scrollbar {
+  width: 7px;
+}
+.home::-webkit-scrollbar-track {
+  background-color: var(--bg-och);
+}
+.home::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background-color: var(--text-color-1);
+}
+.home_container {
+  width: 100%;
+  max-height: 100vh;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 0.7fr 1.3fr;
+}
+.sidebar_back {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(36, 47, 61, 0.5);
+  backdrop-filter: blur(8px);
+  transition: 0.3s;
+  display: none;
+}
+.sidebar_back.active {
+  display: block;
+}
+.sidebar_container {
+  position: fixed;
+  top: 0;
+  left: -275px;
+  width: 275px;
+  height: 100%;
+  background-color: var(--bg-1);
+  transition: 0.3s ease-in-out;
+}
+.sidebar_container.active {
+  left: 0;
+}
+.sidebar {
+  background-color: aqua;
+  max-height: 100vh;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 120px calc(100vh - 120px);
+  background-color: var(--bg-1);
+  background-color: #033dce;
+}
+.sidebar .sidebar_header {
+  position: relative;
+  z-index: 3;
+  background-color: var(--bg-1);
+  display: grid;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1.2fr 0.8fr;
+  padding-left: 1.5rem;
+  border-bottom: 1px solid var(--bg-bold);
+}
+.sidebar_header .sidebar_img {
+  width: 55px;
+  height: var(--height);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #0060fa;
+  border-radius: 50%;
+}
+.sidebar_img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+  cursor: pointer;
+}
+.sidebar_header .sidebar_down_icon {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  cursor: pointer;
+  padding: 0.8rem 0;
+  padding-right: 1.5rem;
+}
+.sidebar_down_icon div {
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: var(--text-color-1);
+}
+.sidebar_header .icon {
+  color: var(--text-color-1);
+  font-weight: 600;
+  font-size: 1.2rem;
+  transition: 0.2s;
+}
+.sidebar_header .icon.active {
+  transform: rotateZ(180deg);
+}
+.sidebar .sidebar_content {
+  position: relative;
+  overflow-y: auto;
+  height: calc(100vh - 120px);
+  background-color: var(--bg-1);
+}
+.sidebar_content::-webkit-scrollbar {
+  width: 4px;
+}
+.sidebar_content::-webkit-scrollbar-track {
+  background-color: var(--bg-och);
+}
+.sidebar_content::-webkit-scrollbar-thumb {
+  background-color: var(--text-color-1);
+  border-radius: 8px;
+}
+
+.sidebar_content .sidebar_header_hidden {
+  position: absolute;
+  top: 8px;
+  left: 0;
+  z-index: 1;
+  background-color: var(--bg-1);
+  height: 94px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  justify-content: flex-start;
+  align-items: center;
+  border-bottom: 1px solid var(--bg-bold);
+  padding-bottom: 8px;
+}
+.sidebar_header_hidden .siderbar_user_box {
+  padding-left: 1.5rem;
+  height: 43px;
+  display: grid;
+  grid-template-columns: 0.4fr 1.6fr;
+  justify-content: flex-start;
+  align-items: center;
+  transition: 0.2s;
+  cursor: pointer;
+}
+.siderbar_user_box:hover {
+  background-color: var(--bg-och);
+}
+.siderbar_user_box .user_img_box {
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  background-color: #0060fa;
+}
+.siderbar_user_box div {
+  color: var(--text-color-1);
+  font-size: 0.9rem;
+}
+.siderbar_user_box .icon {
+  color: var(--color-1);
+  font-size: 1.6rem;
+}
+.sidebar_content .sidebar_nav {
+  position: absolute;
+  top: 8px;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  height: calc(100% - 8px);
+  background-color: var(--bg-1);
+  display: grid;
+  grid-template-rows: 1.7fr 0.3fr;
+  background-color: var(--bg-1);
+  transition: 0.2s;
+}
+.sidebar_nav.active {
+  top: 110px;
+}
+.sidebar_nav ul li {
+  padding-left: 1.5rem;
+  height: 43px;
+  width: 100%;
+  transition: 0.2s;
+  cursor: pointer;
+  display: grid;
+  grid-template-columns: 0.4fr 1.6fr;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 0.9rem;
+}
+.sidebar_nav ul li:hover {
+  background-color: var(--bg-och);
+}
+.sidebar_nav ul li .icon {
+  color: var(--color-1);
+  font-size: 1.6rem;
+}
+.sidebar_nav ul li div {
+  color: var(--text-color-1);
+  font-size: 0.9rem;
+}
+.sidebar_nav .sidebar_bottom {
+  padding-left: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  height: 100%;
+}
+.sidebar_bottom .bottom_title {
+  font-size: 0.93rem;
+  color: var(--text-color-1);
+  cursor: pointer;
+}
+.sidebar_bottom .bottom_version {
+  font-size: 0.9rem;
+  color: var(--text-color-1);
+  cursor: pointer;
+}
+.sidebar_bottom .bottom_title:hover,
+.sidebar_bottom .bottom_version:hover {
+  text-decoration: underline;
+}
+.un_edit_form {
+  display: none;
+  transition-delay: 0.4s;
+}
+.un_edit_form.active {
+  display: block;
+}
+.un_box {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 280px;
+  min-height: 240px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  background-color: var(--bg-1);
+  border-radius: 10px;
+  padding: 1.5rem;
+  gap: 2rem;
+  -webkit-box-shadow: 0px 5px 14px -6px rgba(34, 60, 80, 0.6);
+  -moz-box-shadow: 0px 5px 14px -6px rgba(34, 60, 80, 0.6);
+  box-shadow: 0px 5px 14px -6px rgba(34, 60, 80, 0.6);
+}
+.un_box .un_edit_header {
+  width: 100%;
+  font-size: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--text-color-1);
+}
+.un_box .un_form {
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+}
+.un_form #outlined-number-label {
+  color: var(--text-color-1);
+}
+.un_form #outlined-number {
+  outline: none !important;
+  color: var(--text-color-1);
+}
+.un_form .un_edit_btn {
+  height: 55px;
+  background-color: #033dce;
+  color: var(--text-color-1);
+  font-size: 1.1rem;
+}
+/*  chats component style */
+
+.chats_container {
+  width: 100%;
+  max-height: 100vh;
+  display: grid;
+  grid-template-columns: 0.3fr 1.7fr;
+  background-color: var(--bg-1);
+}
+.chat_menu_container {
+  background-color: var(--bg-bold);
+}
+.menu_icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.menu_icons .menu_icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.menu_icon {
+  width: 100%;
+  height: var(--height);
+  background-color: var(--bg-bold);
+  cursor: pointer;
+  transition: 0.2s;
+}
+.menu_icon:hover {
+  background-color: var(--bg-och);
+}
+.menu_icon .icon {
+  font-size: 1.6rem;
+  color: var(--text-color-1);
+}
+.menu_icon .menu_title {
+  font-size: 0.75rem;
+  color: var(--text-color-1);
+}
+.menu .icon {
+  font-size: 1.8rem;
+}
+.menu_first .icon {
+  font-size: 2.2rem;
+}
+
+.chat_side {
+  display: grid;
+  grid-template-rows: var(--height) calc(100% - var(--height));
+  border-right: 1px solid var(--bg-bold);
+}
+.chat_header {
+  background-color: var(--bg-1);
+  display: grid;
+  grid-template-columns: 1.6fr 0.4fr;
+  justify-content: center;
+  align-items: center;
+}
+.chat_header .chat_search_input {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.chat_search_input input {
+  width: 90%;
+  height: 35px;
+  border-radius: 6px;
+  background-color: var(--bg-och);
+  color: var(--text-color-1);
+  font-size: 0.9rem;
+  padding: 0 1rem;
+}
+.chat_search_input input::placeholder {
+  color: rgba(184, 184, 255, 0.8);
+}
+.chat_header .chat_lock_icon {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.chat_lock_icon .icon {
+  font-size: 1.5rem;
+  color: var(--text-color-1);
+}
+.chat_content {
+  max-height: calc(100vh - var(--height));
+  overflow-y: auto;
+  background-color: var(--bg-1);
+}
+.chat_content::-webkit-scrollbar {
+  width: 4px;
+}
+.chat_content::-webkit-scrollbar-track {
+  background-color: #242f3d;
+}
+
+.chat_content::-webkit-scrollbar-thumb {
+  background-color: var(--text-color-1);
+  border-radius: 5px;
+}
+
+.chat_content .chat {
+  height: var(--height);
+  display: grid;
+  grid-template-columns: 0.4fr 1.2fr 0.4fr;
+  background-color: var(--bg-1);
+  justify-content: center;
+  align-items: center;
+  transition: 0.2s;
+  cursor: pointer;
+}
+.chat_content .chat:hover {
+  background-color: var(--bg-och);
+}
+.chat .chat_img {
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  /* background-color: #0060fa; */
+}
+.chat_img img {
+  width: 45px;
+  object-fit: cover;
+  height: 45px;
+  border-radius: 50%;
+  margin-left: 1rem;
+}
+.chat .chat_username {
+  font-size: 0.95rem;
+  color: var(--text-color-1);
+  font-weight: 500;
+}
+.chat .chat_time {
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  color: var(--text-color-1);
+  font-size: 0.9em;
+  font-weight: 500;
+  margin-right: 1rem;
+}
+
+.messages_container {
+  background-color: var(--bg-bold);
+  display: grid;
+  grid-template-rows: var(--height) calc(100vh - 2 * (var(--height))) var(
+      --height
+    );
+}
+.message_header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: var(--bg-1);
+  cursor: pointer;
+}
+.message_header .message_username {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 2rem;
+  color: var(--text-color-1);
+  font-size: 1.1rem;
+}
+.message_header .message_header_icons {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.message_header_icons .message_icon_box {
+  height: 100%;
+  padding: 0.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 0.5rem;
+}
+.message_icon_box:hover .icon {
+  color: var(--text-color-2);
+}
+.message_header_icons .icon {
+  font-size: 1.4rem;
+  color: var(--text-color-1);
+}
+
+.message_input_box .message_form {
+  height: 100%;
+  background-color: var(--bg-1);
+  display: grid;
+  grid-template-columns: 1.7fr 0.3fr;
+}
+.message_form .message_input input {
+  width: 100%;
+  height: 100%;
+  padding: 0 1rem;
+  color: var(--text-color-1);
+  background-color: inherit;
+  font-size: 1rem;
+}
+.message_form .message_input_icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.message_form .message_input_icons:hover .send_icon {
+  color: var(--color-1-a);
+}
+.message_form .message_input_icons .send_icon {
+  font-size: 1.8rem;
+  color: var(--color-1);
+  transition: 0.2s ease;
+}
+.message_content {
+  background-color: var(--bg-bold);
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  overflow-y: auto;
+}
+.message_content::-webkit-scrollbar {
+  width: 4px;
+}
+.message_content::-webkit-scrollbar-thumb {
+  background-color: var(--text-color-1);
+  border-radius: 8px;
+}
+.message_content::-webkit-scrollbar-track {
+  background-color: var(--bg-och);
+}
+.message_content .message:first-child {
+  margin-top: 2rem;
+}
+.message_content .message {
+  max-width: 500px;
+  margin: 0.8rem;
+  padding: 1rem 0.5rem;
+  display: grid;
+  grid-template-columns: 60px 1.5fr;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  background-color: var(--bg-1);
+  object-fit: cover;
+}
+.message .message_action {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.message_action .icon {
+  font-size: 1.3rem;
+  margin: 0.2rem;
+  color: var(--text-color-1);
+}
+.message_action .icon:hover {
+  color: var(--text-color-2);
+}
+.message_action .icon:nth-child(2) {
+  color: var(--delete-och);
+}
+.message_action .icon:nth-child(2):hover {
+  color: var(--delete-toq);
+}
+.message .message_text {
+  padding: 0 0.8rem;
+  color: var(--text-color-1);
+  font-size: 0.9rem;
+}
+.message_input_icons .send_icon {
+  color: #0060fa;
+}
+.message_input_icons:hover .send_icon {
+  color: #033dce !important;
+}
+
+/* loading */
+
+.loading_container {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 99;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(253, 253, 253, 0.6);
+}
+.loading_container .loading {
+  width: 120px;
+  min-height: 14%;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: center;
+  padding: 1rem;
+}
+.loading .loading_box {
+  width: 20px;
+  height: 100%;
+  background-color: var(--delete-och);
+}
+.loading .load1 {
+  animation: load 0.7s 0.2s ease-in infinite;
+}
+
+.loading .load2 {
+  animation: load 0.7s 0.35s ease-in infinite;
+}
+.loading .load3 {
+  animation: load 0.7s 0.5s ease-in infinite;
+}
+@keyframes load {
+  0% {
+    transform: scaleY(1);
+  }
+  50% {
+    transform: scaleY(0.5);
+  }
+  100% {
+    transform: scaleY(1);
+  }
 }
